# usaspending-mcp

./: README.md  goostr.py  main.py  pyproject.toml
goostr/: __init__.py  __main__.py  server.py  util.py
src/: __init__.py  server.py
src/usaspending_mcp/: __init__.py  server.py
